brat/test/golden/error/fanout-list.brat.golden
Error in test/golden/error/fanout-list.brat on line 2:
f = { [/\] }
    ^^^^^^^^

  Type error: Fanout ([/\]) only applies to Vec

